# DataParser

./: CMakeLists.txt  README.md  csv_splitter.sh  main.cpp
